# Handmade-Pixel

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  spec.yaml
.cargo/: config.toml
.sqlx/: query-0dee4ffd832c365a693629ec2346885dca341c69db577804fb6b6c7a2ba30769.json  query-6aff7de9735a9d14cefc3a327c520eca15cf1963b8fa31c19edbc886c3efe76e.json  query-8d51b6d954b4a573de9778a37ff870788c77c95a90c673b0f48d14613f424814.json  query-af811aab62553bfc6c717f116e3cdcb427accf6b212222638707250625018fdb.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240705215250_create_users_table.sql  20240707191828_add_status_to_users.sql  20240707192010_make_status_not_null_in_users.sql  20240707192257_create_user_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_user.rs  user_email.rs  username.rs
src/routes/: health_check.rs  mod.rs
src/routes/confirm/: confirm.html  mod.rs
src/routes/design/: design.html  mod.rs
src/routes/home/: home.html  home1.html  mod.rs
src/routes/learn_more/: mod.rs  (+1 more)
static/: home.css  index.css  index1.css  learnmore.css  lessons.css  login.css
static/generated_html/: home.data  home.html  home.js  home.wasm
static/generated_wasm/: circle.wasm  demo.wasm  ems_wgpu.wasm  metaballs.wasm  metaballs0.wasm  metaballs1.wasm  texture_metaballs.wasm  two_circles.wasm
templates/: home.html  lesson1.html  lesson2.html  lessons.html
tests/api/: helpers.rs  main.rs  signup.rs  signup_confirm.rs
(+25 files in other folders)
