[package]
name = "handmade_pixel"
version = "0.1.0"
authors = ["Alejandro Fernandez <alejandr.fernand@ufl.edu>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "handmade_pixel"

[dependencies]
validator = "0.16"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
config = "0.13"
serde = { version = "1", features = ["derive"] }
actix-web = "4"
actix-files = "0.6"
unicode-segmentation = "1.7.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
rand = { version = "0.8", features = ["std_rng"] }


[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.9"